--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 # Ensure shell scripts always use LF line endings (Unix-style)
 # This prevents "No such file or directory" errors in Docker containers
 *.sh text eol=lf
+deploy.sh text eol=lf
+entrypoint.sh text eol=lf
 
 # Python files
 *.py text eol=lf
