Add git and docker CLI for System Updates UI
- Install git and docker CLI in container
- Mount docker socket for container management
- Bind mount app directory for git updates
- Use named volume for .venv to prevent override

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,8 +10,11 @@ services:
     expose:
       - "8000"  # Internal port only, not exposed to host
     volumes:
-      - ./master_db:/app/master_db      # Persist master database
-      - ./tenant_dbs:/app/tenant_dbs    # Persist tenant databases
+      - .:/app                           # Mount app code for git updates
+      - venv_data:/app/.venv             # Preserve virtual environment
+      - ./master_db:/app/master_db       # Persist master database
+      - ./tenant_dbs:/app/tenant_dbs     # Persist tenant databases
+      - /var/run/docker.sock:/var/run/docker.sock  # Docker socket for container management
     networks:
       - appnet
 
@@ -52,6 +55,6 @@ networks:
   appnet:
     driver: bridge
 
-# volumes:
-#   postgres_data:
-#     driver: local
+volumes:
+  venv_data:
+    driver: local
