--- a/compose.yaml
+++ b/compose.yaml
@@ -10,8 +10,7 @@ services:
     expose:
       - "8000"  # Internal port only, not exposed to host
     volumes:
-      - .:/app                           # Mount app code for git updates
-      - venv_data:/app/.venv             # Preserve virtual environment
+      - ./.git:/app/.git:ro              # Mount git directory for version checking (read-only)
       - ./master_db:/app/master_db       # Persist master database
       - ./tenant_dbs:/app/tenant_dbs     # Persist tenant databases
       - /var/run/docker.sock:/var/run/docker.sock  # Docker socket for container management
@@ -55,6 +54,6 @@ networks:
   appnet:
     driver: bridge
 
-volumes:
-  venv_data:
-    driver: local
+# volumes:
+#   postgres_data:
+#     driver: local
