Fix System Updates: mount compose.yaml and make .git writable
- Mount compose.yaml for docker compose commands to work
- Make .git writable so git fetch can update refs
- Fixes 'No logs available' and container status issues
- Fixes 'Failed to fetch from remote' error

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,8 @@ services:
     expose:
       - "8000"  # Internal port only, not exposed to host
     volumes:
-      - ./.git:/app/.git:ro              # Mount git directory for version checking (read-only)
+      - ./.git:/app/.git                 # Mount git directory for updates (writable for fetch)
+      - ./compose.yaml:/app/compose.yaml:ro  # Mount compose file for docker compose commands
       - ./master_db:/app/master_db       # Persist master database
       - ./tenant_dbs:/app/tenant_dbs     # Persist tenant databases
       - /var/run/docker.sock:/var/run/docker.sock  # Docker socket for container management
